twiter-streaming/twitter/twitter-backend/kubernetes/twitterwebsockets-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/git-branch: master
    jkube.io/git-url: https://github.com/ravening/SpringBoot.git
    jkube.io/git-commit: 2c1771fed23a8d654ef111b9d583e93f173ac74e
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/twitterwebsockets
    jkube.io/scm-tag: HEAD
    jkube.io/issue-system: GitHub
    jkube.io/issue-tracker-url: https://github.com/spring-projects/spring-boot/issues
  labels:
    app: twitterwebsockets
    provider: jkube
    version: 0.0.1
    group: com.programmerfriend.websockets
  name: twitterwebsockets
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: twitterwebsockets
      provider: jkube
      group: com.programmerfriend.websockets
  template:
    metadata:
      annotations:
        jkube.io/git-branch: master
        jkube.io/scm-url: https://github.com/spring-projects/spring-boot/twitterwebsockets
        jkube.io/issue-system: GitHub
        jkube.io/issue-tracker-url: https://github.com/spring-projects/spring-boot/issues
        jkube.io/git-url: https://github.com/ravening/SpringBoot.git
        jkube.io/scm-tag: HEAD
        jkube.io/git-commit: 2c1771fed23a8d654ef111b9d583e93f173ac74e
      labels:
        app: twitterwebsockets
        provider: jkube
        version: 0.0.1
        group: com.programmerfriend.websockets
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: docker.io/rakgenius/twitterwebsockets:1.0
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
